# agents

./: README.md  abc.txt
services/first-agent/: pyproject.toml  run.py
services/openai/: README.md  config.py  hello.py  pyproject.toml
services/openai/assistant/: create_assistant.py  syncdata.py  syncdata2.py
services/openai/finetuning/: finetune.py  tmp_recipe_finetune_training.jsonl
services/openai/rag/: langchain01.py  langchain02.py  lc_qdrant.py  local_quickstart.py  qdrant_delete.py  qdrant_list.py  qdrant_semantic101.py
services/openai/rag/services/openai/: meta.json
services/openai/rag/services/openai/collection/demo_collection/: storage.sqlite
