[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.10",
    "langchain-community>=0.3.10",
    "loguru>=0.7.3",
    "matplotlib>=3.9.3",
    "openai>=1.57.0",
    "pandas>=2.2.3",
    "pymongo>=4.10.1",
    "qdrant-client>=1.12.1",
    "scikit-learn>=1.6.0",
]
